2003-06-13  Richard Henderson  <rth@redhat.com>

	* cfgbuild.c (make_edges): Set ABNORMAL with SIBCALL.
	* cfgrtl.c (purge_dead_edges): Expect it too.

2003-06-13  Jim Wilson  <wilson@tuliptree.org>
            Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR bootstrap/10983
	* combine.c (make_extraction): Use gen_lowpart_for_combine
	when extracting from a REG and not in the destination of a SET.

2003-06-13  Doug Evans  <dje@sebabeach.org>

	* tsystem.h (abort): Declare in inhibit_libc case to remove build
	warnings for addvsi3, et.al.

2003-06-13  Aldy Hernandez  <aldyh@redhat.com>

        * c-common.c (handle_mode_attribute): Use VECTOR_MODE_P macro.

        * simplify-rtx.c (simplify_subreg): Same.

        * emit-rtl.c (gen_lowpart_common): Same.

2003-06-13  Kazu Hirata  <kazu@cs.umass.edu>

	* builtins.c: Fix comment typos.
	* fold-const.c: Likewise.

2003-06-13  Doug Evans  <dje@sebabeach.org>
	    Kazuhiro Inaoka <inaoka.kazuhiro@renesas.com>

	* config/m32r/m32r-protos.h (m32r_pass_by_reference): Declare.
	* config/m32r/m32r.c (m32r_pass_by_reference): New fn.
	(m32r_va_arg): Use it.
	* config/m32r/m32r.h (FUNCTION_ARG_PASS_BY_REFERENCE): Ditto.
	(RETURN_IN_MEMORY): Ditto.

2003-06-13  Nathanael Nerode  <neroden@gcc.gnu.org>

	* c-typeck.c: Remove #if 0 clauses.

	PR other/1494
	* config/alpha/openbsd.h, config/i386/openbsd.h,
	config/m68k/openbsd.h, config/sparc/openbsd.h: Remove
	residual reference to EGCS.

2003-06-13  Richard Earnshaw  <rearnsha@arm.com>

	* arm.c (output_call_mem): If the address references the link-register
	use an instruction sequence that avoids early-clobbering IP.
	(eliminate_lr2ip): Delete.

2003-06-13  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* c-format.c (format_types_orig): Disallow '*' width/precision in
	asm_fprintf format checks.

2003-06-13  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/s390.c (s390_va_arg): Fix alignment when retrieving 
	non-integral types from integer register save area slots.
